Spicing things up by learning about modal while adding it on the base code. Have change a few other things as well...

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   
 </head>
 <body>
-  <img src="https://media.licdn.com/dms/image/C4D03AQGJw_TErnO3wQ/profile-displayphoto-shrink_400_400/0/1583675539554?e=1676505600&v=beta&t=_tPB53XjF4GZQyDK8kPd3Eeuk5R2vD-YADaUinB9DFI" alt="profile pic" class="profile-pic">
+<!-- Start vCard base program -->
+  <img src="https://media.licdn.com/dms/image/C4D03AQGJw_TErnO3wQ/profile-displayphoto-shrink_400_400/0/1583675539554?e=1676505600&v=beta&t=_tPB53XjF4GZQyDK8kPd3Eeuk5R2vD-YADaUinB9DFI" alt="profile pic" id="profile-pic">
   <h3 class="profile-pic-caption">Michée Kiyombo Tokatoka </h3>
   <p>In love with STEM. Aspiring to join a tech-centric sustainable business that contribute as much as possible to the improvement of humanity through Science. Meanwhile, I am learning as many cutting edge technologies as I possibly can to help concretise my aspirations.</p>
   <p>Currently working as an electrical and automation technician at <a href="https://www.tfdesign.co.za" target="_blank">TFDesign</a>. An Engineering company that focuses on solving Mechanical and electrical automation problems in the industrial arena.</p>
@@ -30,10 +31,20 @@
 
  <a href="mailto:tokatokakiyombo@gmail.com" class="btn" target="_blank">Email me</a>
  
- <a href="https://wa.me/27610655497" class="btn" target="_blank">Whatsapp me</a>
+ 
+ <a href="https://wa.me/27610655497" class="btn" target="_blank">Whatsapp me</a>    <script>
+ feather.replace()
 
-    <script>
-      feather.replace()
     </script>
+<!-- End vCard base program -->
+<!-- Start adding profile-pic modal to the base program -->
+
+<div id="prof-pic-modal" class="modal">
+    <span id="prof-pic-modal-close-btn">&times;</span>
+    <img src="https://media.licdn.com/dms/image/C4D03AQGJw_TErnO3wQ/profile-displayphoto-shrink_400_400/0/1583675539554?e=1676505600&v=beta&t=_tPB53XjF4GZQyDK8kPd3Eeuk5R2vD-YADaUinB9DFI" alt="profile pic">
+</div>
+<!-- Start adding profile-pic modal to the base program -->
+
+<script src="main.js"></script>
 </body>
-</html>
+</html>vCard/index.html
