change colors and add the top background

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <!-- Start vCard base program -->
+  <div id="cover-pic"></div>
   <img src="https://media.licdn.com/dms/image/C4D03AQGJw_TErnO3wQ/profile-displayphoto-shrink_400_400/0/1583675539554?e=1676505600&v=beta&t=_tPB53XjF4GZQyDK8kPd3Eeuk5R2vD-YADaUinB9DFI" alt="profile pic" id="profile-pic">
   <h3 class="profile-pic-caption">Michée Kiyombo Tokatoka </h3>
   <p>In love with STEM. Aspiring to join a tech-centric sustainable business that contribute as much as possible to the improvement of humanity through Science. Meanwhile, I am learning as many cutting edge technologies as I possibly can to help concretise my aspirations.</p>
