--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="cover-pic"></div>
   <img src="https://media.licdn.com/dms/image/C4D03AQGJw_TErnO3wQ/profile-displayphoto-shrink_400_400/0/1583675539554?e=1676505600&v=beta&t=_tPB53XjF4GZQyDK8kPd3Eeuk5R2vD-YADaUinB9DFI" alt="profile pic" id="profile-pic">
   <h3 class="profile-pic-caption">Michée Kiyombo Tokatoka </h3>
-  <p>In love with STEM. Aspiring to join a tech-centric sustainable business that contribute as much as possible to the improvement of humanity through Science. Meanwhile, I am learning as many cutting edge technologies as I possibly can to help concretise my aspirations.</p>
+  <p>In love with STEM. Aspiring to join a tech-centric sustainable business that contributes as much as possible to the improvement of humanity through Science. Meanwhile, I am learning as many cutting edge technologies as I possibly can to help concretise my aspirations.</p>
   <p>Currently working as an electrical and automation technician at <a href="https://www.tfdesign.co.za" target="_blank">TFDesign</a>. An Engineering company that focuses on solving Mechanical and electrical automation problems in the industrial arena.</p>
   
   <div class="icons">
