added assets folder with pic

--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
   <body>
     <!-- Start vCard base program -->
     <div id="cover-pic"></div>
-    <img
-      src="https://media.licdn.com/dms/image/C4D03AQGJw_TErnO3wQ/profile-displayphoto-shrink_800_800/0/1583675539554?e=1684972800&v=beta&t=DK7EDpNlQ9U38SjokJOg-WyH1AdTumbgB6DyfVXQwvU"
-      alt="profile pic"
-      id="profile-pic"
-    />
+    <img src="./assets/michee-pic.jpg" alt="profile pic" id="profile-pic" />
     <h3 class="profile-pic-caption">Michée Kiyombo Tokatoka</h3>
     <p>
       In love with STEM. Aspiring to join a tech-centric sustainable business that contributes as much as possible to the improvement of humanity through
