changed the modal img source

--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
 
     <div id="prof-pic-modal" class="modal">
       <span id="prof-pic-modal-close-btn">&times;</span>
-      <img
-        src="https://media.licdn.com/dms/image/C4D03AQGJw_TErnO3wQ/profile-displayphoto-shrink_400_400/0/1583675539554?e=1676505600&v=beta&t=_tPB53XjF4GZQyDK8kPd3Eeuk5R2vD-YADaUinB9DFI"
-        alt="profile pic"
-      />
+      <img src="./assets/michee-pic.jpg" alt="profile pic" />
     </div>
     <!-- Start adding profile-pic modal to the base program -->
 
