added tootltip on accounts icons

--- a/index.html
+++ b/index.html
@@ -37,16 +37,25 @@
         that they have a good memory of me as an individual and as a professional.
       </p>
 
+      <p class="visit-acc-text"><em>Please visit the following accounts for in depth technical information:</em></p>
+
       <div class="icons">
-        <p><em>Please visit the following accounts for in depth technical information:</em></p>
-
-        <a href="https://github.com/MicheeTK" target="_blank"><i data-feather="github"></i></a>
-
-        <a href="https://www.linkedin.com/in/michee-tokatoka-b5024055/" target="_blank"><i data-feather="linkedin"></i></a>
-
-        <a href="https://codepen.io/MicheeTK" target="_blank"><i data-feather="codepen"></i></a>
-
-        <a href="https://www.codewars.com/users/MicheeTK/completed_solutions" target="_blank"><iconify-icon icon="simple-icons:codewars"></iconify-icon></a>
+        <div class="tooltip">
+          <a href="https://github.com/MicheeTK" target="_blank"><i data-feather="github"></i></a>
+          <span class="tooltip-text">Github</span>
+        </div>
+        <div class="tooltip">
+          <a href="https://www.linkedin.com/in/michee-tokatoka-b5024055/" target="_blank"><i data-feather="linkedin"></i></a>
+          <span class="tooltip-text">LinkedIn</span>
+        </div>
+        <div class="tooltip">
+          <a href="https://codepen.io/MicheeTK" target="_blank"><i data-feather="codepen"></i></a>
+          <span class="tooltip-text" id="code-pen">CodePen</span>
+        </div>
+        <div class="tooltip">
+          <a href="https://www.codewars.com/users/MicheeTK/completed_solutions" target="_blank"><iconify-icon icon="simple-icons:codewars"></iconify-icon></a>
+          <span class="tooltip-text" id="code-wars">Codewars</span>
+        </div>
       </div>
 
       <a href="mailto:tokatokakiyombo@gmail.com" class="btn" target="_blank"> Please email me for further information</a>
